<resources>
    <string name="app_name">Pokédex</string>
    <string name="nav_header_title">Pokédex</string>
    <string name="nav_header_subtitle">By Parc. not a Xerox company</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_egg_groups">Egg Groups</string>
    <string name="menu_item_search">Search</string>

    <string name="message_no_internet_connection">Please check your internet connection, as no corresponding local data was found!</string>

    <!-- Move strings -->
    <string name="menu_move">Move</string>
    <string name="menu_move_detail">Move Detail</string>
    <string name="move_power">Power: &#160;</string>
    <string name="move_accuracy">Accuracy: &#160;</string>
    <string name="move_pp">PP: &#160;</string>
    <string name="move_priority">Priority: &#160;</string>
    <string name="generation">Generation</string>
    <string name="flavor_text">Flavor Text</string>
    <string name="language">en</string>
    <string name="power_short">Att: &#160;</string>
    <string name="pp_short">&#160; PP: &#160;</string>
    <string name="accuracy_short">&#160; Acc: &#160;</string>


    <!-- Game Versions (Move Flavor Text) -->
    <string name="red_and_blue">Red and Blue:\n</string>
    <string name="yellow">Yellow:\n</string>
    <string name="gold_and_silver">Gold and Silver:\n</string>
    <string name="crystal">Crystal:\n</string>
    <string name="ruby_and_sapphire">Ruby and Sapphire:\n</string>
    <string name="emerald">Emerald:\n</string>
    <string name="firered_and_leafgreen">Fire Red and Leaf Green:\n</string>
    <string name="diamond_and_pearl">Diamond and Pearl:\n</string>
    <string name="platinum">Platinum:\n</string>
    <string name="heartgold_and_soulsilver">Heart Gold and Soul Silver:\n</string>
    <string name="black_and_white">Black and White:\n</string>
    <string name="colosseum">Colosseum:\n</string>
    <string name="xd">Xd:\n</string>
    <string name="black2_and_white2">Black 2 and White 2:\n</string>
    <string name="x_and_y">X and Y:\n</string>
    <string name="omegaruby_and_alphasapphire">Omega Ruby and Alpha Sapphire:\n</string>
    <string name="sun_and_moon">Sun and Moon:\n</string>
    <string name="ultrasun_and_ultramoon">Ultra Sun and Ultra Moon:\n</string>

    <!-- search strings -->
    <string name="search">Search</string>
    <string name="search_hint">search</string>
    <string name="pokedex">Pokedex</string>

    <!--                  Egg Groups (General)                  -->
    <string name="header_egg_groups">Egg Groups</string>
    <string name="egg_group_monster">Monster</string>
    <string name="egg_group_humanlike">Human-like</string>
    <string name="egg_group_bug">Bug</string>
    <string name="egg_group_mineral">Mineral</string>
    <string name="egg_group_flying">Flying</string>
    <string name="egg_group_amorphous">Amorphous</string>
    <string name="egg_group_field">Field</string>
    <string name="egg_group_fairy">Fairy</string>
    <string name="egg_group_ditto">Ditto</string>
    <string name="egg_group_grass">Grass</string>
    <string name="egg_group_dragon">Dragon</string>
    <string name="egg_group_water1">Water 1</string>
    <string name="egg_group_water2">Water 2</string>
    <string name="egg_group_water3">Water 3</string>
    <string name="egg_group_no_eggs">No Eggs</string>

    <!--                  Egg Groups (Fragment)                 -->
    <string name="activity_egg_group_pokemon_list_header">Pokemon</string>
    <string name="activity_egg_group_filter_show_all">Show All</string>
    <string name="activity_egg_group_filter_only_in_this_group">Only in this group</string>
    <string name="activity_egg_group_filter_not_only_in_this_group">In others</string>
    <string name="splash_screen_picture">Splash Screen</string>

    <!-- Ability string -->
    <string name="ability_effect">Effect</string>
    <string name="ability_flavor_text">Flavor Text</string>
    <string name="ability_generation">Generation</string>
    <string name="ability_pokeball_background_description">Pokeball Background</string>
    <string name="ability_tab_ability">Ability</string>
    <string name="ability_tab_pokemon">Pokemon With This Ability</string>
    <string name="ability_pokemon_filter">Ability Pokemon</string>
    <string name="ability_detail_app_bar_name">Ability Details</string>


    <!-- Locations string -->
    <string name="locations_item_area_pokemon_name">Pokemon Name</string>
    <string name="locations_item_area_pokemon_image_sprite">Pokemon Image Sprite</string>
    <string name="locations_item_poke_city">Poke City</string>
    <string name="locations_pokemon_encounter">Pokemon Encounter</string>
    <string name="location_generation_i">Generation I</string>
    <string name="locations_image_starter">Image Starter</string>
    <string name="locations_icon_pokeball">Icon Pokeball</string>
    <string name="locations_generation_ii">Generation II</string>
    <string name="locations_generation_iii">Generation III</string>
    <string name="locations_generation_iv">Generation IV</string>
    <string name="locations_generation_v">Generation V</string>
    <string name="locations_generation_vi">Generation VI</string>
    <string name="locations_generation_vii">Generation VII</string>
    <string name="locations_region_loading">Region Loading…</string>

    <string name="locations_not_implemented">The following location has no other info in the pokèAPI !!</string>

    <string name="locations_menu_title">Locations</string>
    <string name="locations_list_region_title">Region of</string>

    <string name="locations_filter_generation_title">Filter by Generation</string>
    <string name="locations_list_title">Locations List</string>
    <string name="locations_area_list_title">Location Area List</string>
    <string name="locations_area_details_title">Loacations Area Details</string>


    <!-- Pokemon string -->
    <string name="imageviewbackground">imageViewBackground</string>
    <string name="text_view_pokemon_name_value">Name</string>
    <string name="text_view_pokemon_id_value">Number</string>
    <string name="text_view_pokemon_weight">WEIGHT:</string>
    <string name="text_view_pokemon_height">HEIGHT:</string>
    <string name="text_view_details_menu">Details</string>
    <string name="text_view_moves_menu">Moves</string>
    <string name="text_view_pokemon_name">Name pokemon:</string>
    <string name="text_view_pokemon_id" translatable="false">PokeId:</string>
    <string name="image_view_pokeid" translatable="false">imageViewPokeId</string>
    <string name="image_view_pokeball_dx" translatable="false">imageViewPokeballDx</string>
    <string name="image_view_pokeball1" translatable="false">imageViewPokeball1</string>
    <string name="switch_prefer">Favorite</string>
    <string name="text_view_pokemon_hp" translatable="false">HP</string>
    <string name="text_view_pokemon_attack">Attack</string>
    <string name="text_view_pokemon_defense">Defense</string>
    <string name="text_view_pokemon_sp_atk">Sp. Atk</string>
    <string name="text_view_pokemon_sp_def">Sp. Def</string>
    <string name="text_view_pokemon_speed">Speed</string>
    <string name="text_view_pokemon_hp_int" translatable="false">NN</string>
    <string name="text_view_pokemon_attack_int" translatable="false">NN</string>
    <string name="text_view_pokemon_defense_int" translatable="false">NN</string>
    <string name="text_view_pokemon_sp_atk_int" translatable="false">NN</string>
    <string name="text_view_pokemon_sp_def_int" translatable="false">NN</string>
    <string name="text_view_pokemon_speed_int" translatable="false">NN</string>

</resources>
